# deb_project

./: README.md
00-bootcamp-project/: deb4-project-d9aac64d3b6f.json  ingest.py  load.py  load_data_to_bigquery.py  main-postgres.py  pyproject.toml  transform.py
00-bootcamp-project/ENV/: pyvenv.cfg
00-bootcamp-project/data/: events.csv
00-bootcamp-project/sandbox/: exchanges.csv  get_exchanges.py  my_script.py  transform_exchanges.py
